# Fuel-Quote-Project

./: .phpunit.result.cache  Cargo.toml  composer.json  package-lock.json  phpunit.xml  phpunit.xml.bak  t.txt  tailwind.config.js
.phpunit.cache/: test-results
PhpFiles/: FuelPricingModule.php  FuelQuoteModule.php  FuelQuoteValidation.php  loginModule.php  loginValidation.php  profileManagement.php  profileValidation.php  registerModule.php  registerValidation.php
coverage-report/: FuelPricingModule.php.html  FuelQuoteModule.php.html  FuelQuoteValidation.php.html  dashboard.html  index.html  loginModule.php.html  loginValidation.php.html  profileManagement.php.html  profileValidation.php.html  registerModule.php.html  registerValidation.php.html
php/: FuelQuoteModule.php  FuelQuoteValidation.php  history.html
src/: .dumb_models.rs  api.rs  cookie_util.rs  main.rs  models.rs  php.rs
src/api/: .login.rs  login.rs  register.rs
src/database/: history.rs  users.rs
src/frontend/: history.rs
templates/: history.html.tera  profile.html.tera
test/: test.php
tests/: FuelQuoteModuleTest.php  FuelQuoteValidationTest.php  loginModuleTest.php  loginValidationTest.php  profileManagementTest.php  profileValidationTest.php  registerModuleTest.php  registerValidationTest.php
util/: myDB3.sql  sample_data.sql  setup.sql  teardown.sql
