[package]
name = "Test-Login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.1.0"
rocket = { version = "0.5.0", features = ["json", "uuid", "secrets"] }
uuid = {version = "1.0.0", features=["v4", "serde"]}

postgres = {version = "0.19.4", features = ["with-uuid-1", "with-chrono-0_4"]}
deadpool-postgres = {version = "0.10.5", features = ["rt_tokio_1"]}
postgres-types = { version = "0.2.4", features=["derive"]}

serde = {features = ["derive"] }

ring = "0.17.0-alpha.11"
sha2 = "0.10.6"
